Add styles in WP

--- a/wp-content/themes/fictional-university-theme/style.css
+++ b/wp-content/themes/fictional-university-theme/style.css
@@ -3,3 +3,11 @@ Theme Name: Fictional University
 Author: faisalahammed044274
 Version:  1.0.0
 */
+
+body{
+    color:chocolate;
+}
+
+a{
+    color:green;
+}
